@@ -1,5 +1,6 @@
 #include <iostream>
 #include <fstream>
+#include <exception>
 
 #include <bobcat/arg>
 #include <bobcat/mstream>
